add SystemMusic Player & modify entry

--- a/Player/Base.lproj/Main.storyboard
+++ b/Player/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qEZ-aA-4Qk">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--音频和视频功能入口-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -16,12 +15,53 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bRX-Sc-mqR">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="49R-XG-LDC"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="K3Y-Wd-BSU"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bRX-Sc-mqR" secondAttribute="bottom" id="KvJ-Ly-Kr1"/>
+                            <constraint firstAttribute="trailing" secondItem="bRX-Sc-mqR" secondAttribute="trailing" id="PBk-lK-Hst"/>
+                            <constraint firstItem="bRX-Sc-mqR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="dyf-r5-uyc"/>
+                            <constraint firstItem="bRX-Sc-mqR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xo1-z1-Bmg"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="音频和视频功能入口" id="TBS-Y8-ShH"/>
+                    <connections>
+                        <outlet property="tableView" destination="bRX-Sc-mqR" id="xo8-MV-cyh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="853" y="351"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2PJ-ET-7d1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qEZ-aA-4Qk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CMB-QN-XoS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mXX-LJ-sww"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Eb-fW-dLy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="298" y="341"/>
         </scene>
     </scenes>
 </document>
